# vf-admin-backend

./: .gitignore  Dockerfile  docker-compose.prod.yml  docker-compose.yml  requirements.dev.txt  requirements.txt
calculadora/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
calculadora/migrations/: 0001_initial.py
catalogo/: admin.py  models.py  serializers.py  urls.py  views.py
catalogo/migrations/: 0001_initial.py  0002_servicematerial.py  0003_service_metadata_calculo.py  0004_servicerequiredcategory.py  0005_service_code_blank.py  0006_alter_service_direct_cost_alter_service_sale_price.py
clientes/: admin.py  models.py  serializers.py  urls.py  views.py
clientes/migrations/: 0001_initial.py  0003_client_deleted_at.py  (+1 more)
config/: urls.py  wsgi.py
core/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
cotizaciones/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
diagnosticos/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
equipos/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
finanzas/: admin.py  alertas.py  apps.py  models.py  serializers.py  urls.py  views.py
inventario/: admin.py  apps.py  models.py  serializers.py  signals.py  tests.py  urls.py  views.py
nginx/: nginx.conf
trabajos/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
usuarios/: admin.py  models.py  serializers.py  urls.py  views.py
vf_core/: pyproject.toml
vf_core/vf_core/: normalize.py
vf_core/vf_core/schemas/: __init__.py  diagnostico.py
(+34 files in other folders)
