[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vf-core"
version = "0.1.0"
description = "Utilidades compartidas de VF Digital Solutions"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "unidecode>=1.3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["vf_core*"]
